# fudoki

./: .env.example  .gitattributes  .gitignore  Cargo.toml  README.md  index.html  package-lock.json  package.json  run.bat  run.ps1  run.sh  service-worker.js
docs/superpowers/analysis/: 2026-05-15-codebase-audit.md  2026-05-29-architecture-review.md
docs/superpowers/plans/: 2026-04-21-launcher-scripts-implementation.md  (+8 more)
frontend/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  types.ts
resources/: sudachi.json
resources/system.dic.parts/: manifest.json
scripts/: prepare-system-dic.mjs
src/: analyzer.rs  app.rs  dictionary.rs  english.rs  lib.rs  main.rs  models.rs  number_reading.rs  reading_normalization.rs  server.rs  tts.rs
src/storage/: analysis_cache_repo.rs  db.rs  documents_repo.rs  mod.rs  settings_repo.rs  tts_cache_repo.rs
static/: main-js.js  mobile.css  pwa-assets.json  styles.css
static/js/: backend-api.js  i18n.js  remote-tts.js  tts.js
tests/: analysis_cache_api.rs  analyze_api.rs  analyze_number_readings.rs  dictionary_api.rs  documents_api.rs  english.rs  health.rs  legacy_migration_api.rs  server_bind_addr.rs  settings_api.rs  static_serving.rs  tts_providers_api.rs  tts_speak_api.rs
tests/frontend/: backend-api.test.mjs  remote-tts.test.mjs  service-worker.test.mjs  system-dic-parts.test.mjs  tts-provider-api.test.mjs  tts-provider-ui.test.mjs  tts-segmentation.test.mjs
tests/launcher/: run-bat.test.mjs  run-ps1.test.mjs  run-sh.test.mjs
(+22 files in other folders)
