[package]
name = "fudoki_backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.8"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tower = { version = "0.5.2", features = ["util"] }
tower-http = { version = "0.6.8", features = ["fs"] }
sudachi = { git = "https://github.com/WorksApplications/sudachi.rs.git", package = "sudachi" }
dotenvy = "0.15.7"
reqwest = { version = "0.12.24", default-features = false, features = ["json", "rustls-tls"] }

[dev-dependencies]
http-body-util = "0.1.3"
